--- a/Demo-iOS/Main.storyboard
+++ b/Demo-iOS/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,6 +39,12 @@
                                     <action selector="onFadeOutTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wUj-3b-1Ig"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cephalopod_no_background" translatesAutoresizingMaskIntoConstraints="NO" id="VZB-Ms-Q2b">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Yxu-sr-nuR"/>
+                                    <constraint firstAttribute="width" secondItem="VZB-Ms-Q2b" secondAttribute="height" multiplier="1:1" id="uKS-od-pck"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hxc-9T-D11">
                                 <color key="backgroundColor" red="0.21679224966734081" green="0.28311405154154801" blue="0.40070762434554974" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -47,7 +54,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.85490196078431369" green="0.8901960784313725" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.85490196080000003" green="0.89019607840000003" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="m72-Bt-q1Z" firstAttribute="top" secondItem="xjx-Kg-Xaz" secondAttribute="bottom" constant="8" id="2F7-53-t7i"/>
                             <constraint firstItem="Hxc-9T-D11" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="9nL-XN-Hmf"/>
@@ -55,7 +62,9 @@
                             <constraint firstAttribute="centerX" secondItem="m72-Bt-q1Z" secondAttribute="trailing" constant="25" id="GiA-1U-09e"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="m72-Bt-q1Z" secondAttribute="bottom" constant="20" id="NyI-BK-xB2"/>
                             <constraint firstItem="Luj-xg-b4M" firstAttribute="centerY" secondItem="m72-Bt-q1Z" secondAttribute="centerY" id="ZKW-PM-4WL"/>
-                            <constraint firstItem="xjx-Kg-Xaz" firstAttribute="top" secondItem="Hxc-9T-D11" secondAttribute="bottom" constant="38" id="hQf-MT-X5H"/>
+                            <constraint firstItem="VZB-Ms-Q2b" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="caH-sa-rf0"/>
+                            <constraint firstItem="xjx-Kg-Xaz" firstAttribute="top" secondItem="Hxc-9T-D11" secondAttribute="bottom" constant="141" id="fee-Qg-Mp4"/>
+                            <constraint firstItem="VZB-Ms-Q2b" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="iM9-HE-IJz"/>
                             <constraint firstAttribute="centerX" secondItem="xjx-Kg-Xaz" secondAttribute="centerX" id="pPS-qW-SDc"/>
                             <constraint firstItem="Luj-xg-b4M" firstAttribute="leading" secondItem="m72-Bt-q1Z" secondAttribute="trailing" constant="30" id="uMV-KM-ajh"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Hxc-9T-D11" secondAttribute="trailing" constant="10" id="yRM-fD-VOM"/>
@@ -68,6 +77,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="61.600000000000001" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cephalopod_no_background" width="200" height="200"/>
+    </resources>
 </document>
